// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parent.vue Mount snapshot 1`] = `
<div>
  <h1>parent</h1>
  <main>
    <p>this is a child component</p>
    <p>this is a child component</p>
    <p>this is a child component</p>
  </main>
</div>
`;

exports[`Parent.vue Mount snapshot 2`] = `
<div>
  <h1>
    parent
  </h1>
   
  <main>
    <p>
      this is a child component
    </p>
     
    <p>
      this is a child component
    </p>
     
    <p>
      this is a child component
    </p>
  </main>
</div>
`;

exports[`Parent.vue Properly serializes a fully-mounted wrapper 1`] = `
<div>
  <h1>parent</h1>
  <main>
    <p>this is a child component</p>
    <p>this is a child component</p>
    <p>this is a child component</p>
  </main>
</div>
`;

exports[`Parent.vue Properly serializes a shallowly-rendered wrapper 1`] = `
<div>
  <h1>parent</h1>
  <main>
    <child-stub></child-stub>
    <child-stub></child-stub>
    <child-stub></child-stub>
  </main>
</div>
`;

exports[`Parent.vue Shallow snapshot 1`] = `
<div>
  <h1>parent</h1>
  <main>
    <child-stub></child-stub>
    <child-stub></child-stub>
    <child-stub></child-stub>
  </main>
</div>
`;
